#33  Make sure to show message when no tabs are to be shown.
#34  Prevent E_WARNING when there are no settings configured.

++++++++++++++++++++++++++++++++
++   ClientConfig 1.1.0-pl    ++
++   Released on 2012-12-16   ++
++++++++++++++++++++++++++++++++
#26  Add ability to manually sort Settings within a Group
#25  Add ability to manually sort Groups
#21  Add Filter on Group for settings.
#24  Remember last visited tab in both admin and client view.
#22  Add "Help!" button on Admin panel linking to RTFM instructions.
     Improve checking if key exists on updating a setting.
#30  Fix bug with incorrectly checking cgSetting.is_required checkbox
     Make controller a tad more portable.

++++++++++++++++++++++++++++++++
++   ClientConfig 1.0.0-pl    ++
++   Released on 2012-12-09   ++
++++++++++++++++++++++++++++++++
First release