@@ -57,6 +57,11 @@ foreach ($objects as $object) {
 $manager->addField('cgSetting','options');
 $manager->addField('cgSetting','sortorder');
 $manager->addField('cgGroup','sortorder');
+$manager->alterField('cgSetting', 'value', array());
+$manager->alterField('cgSetting', 'default', array());
+$manager->alterField('cgSetting', 'options', array());
+$manager->alterField('cgSetting', 'description', array());
+$manager->alterField('cgGroup', 'description', array());
 
 $mtime= microtime();
 $mtime= explode(" ", $mtime);
